# Remote

./: .gitignore  DeskBridge.spec  README.md  pyproject.toml
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-06-22-check-local-ip.md  2026-06-22-remote-desktop-lan.md  2026-06-22-viewer-quality.md  2026-06-23-packaging.md  2026-06-23-v2-tailscale.md
docs/superpowers/specs/: 2026-06-22-check-local-ip-design.md  2026-06-22-remote-desktop-design.md  2026-06-22-viewer-quality-design.md  2026-06-23-packaging-design.md  2026-06-23-v2-tailscale-design.md
packaging/: entry.py
src/deskbridge/: __init__.py  app.py  connections.py  gui.py  localip.py  net.py  platform_detect.py  tailscale.py  viewer_launch.py  vnc_server.py
tests/: test_connections.py  test_localip.py  test_net.py  test_platform_detect.py  test_tailscale.py  test_viewer_launch.py  test_vnc_server.py
